[project]
name = "plotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio==3.4.3",
    "matplotlib==3.8.0",
    "numpy==1.26.0",
    "pandas==2.1.1",
    "pillow==10.0.1",
    "python-telegram-bot==20.6",
    "scipy==1.11.3",
    "seaborn==0.13.0",
]
